css/style.css
.site-navigation a:not(.close-menu):hover {
  background: rgb(243,139,121);
  color: #FFF !important;

}
li a {
  color: black;
}
a, a:hover {
  color: rgb(243,139,121);
}
.section {
  margin: 3em 0;
  font-size: 0.8em;
}
blockquote {
  clear: both;
  font-weight: 300;
  margin: 0px 0;
  margin:  4rem 0;
  padding-left: 20px;
  padding-left: 3rem;
  border-left: 2px solid #bbb;
  font-style:italic;
}
blockquote p {
  line-height: 1.45;
  font-size: 20px;
  font-size: 20rem;
}
@media screen and (min-width: 800px) {
  blockquote p {
    font-size: 24px;
    font-size: 2.4rem;
  }
}
blockquote cite {
  display: block;
  font-style: normal;
  font-weight: normal;
  text-transform: uppercase;
  margin-top: 20px;
  margin-top: 2rem;
  font-size: 14px;
  font-size: 1.4rem;
}
blockquote cite::before {
  content: '\2014\00a0';
}

.title {
  text-align: center;
  font-size: 20px;
  font-size: 2rem;
  margin: 6rem 0;
}

#experience {
  width: 70%;
  margin: 0 0 10% 15%;
}

.company h1 {
  font-size: 16px;
  font-size: 1.6rem;
  display:inline-block;

}
.company date {
  font-style: italic;
  opacity: 0.3;
  float:right;
}
.company li {
  margin-left: 24px;
}

#news {
  margin-bottom: 10%;
}
.news {
  color: white;
  padding: 30px;
  background-color: #BAAEAB;
  margin-bottom: 15px;
}
.news:hover {
  background-color: rgba(243,139,121,0.6);
}
.news date {
  display:block;
  position: absolute;
  font-size: 12px;
  font-style:italic;
}
#contact {
  text-align: center;
}
#contact img {
  vertical-align: middle;
  margin-right: 6px;
}
#contact .inner {
  margin: 5% 0 0 35%;
}
#contact li {
  list-style:none;
  margin: 1em;
  text-align: left;
}

